Query Vm resources of the service